name:                accelerate-play
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/k-bx/accelerate-play#readme
license:             BSD3
license-file:        LICENSE
author:              Kostiantyn Rybnikov
maintainer:          k-bx@k-bx.com
copyright:           Kostiantyn Rybnikov <k-bx@k-bx.com>
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable accelerate-play
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       accelerate >= 1.0.0.0
                     , accelerate-llvm-native
                     , accelerate-llvm-ptx
                     , base >= 4.7 && < 5
                     , llvm-hs >= 4.0 && < 5.0
